--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -65,7 +65,7 @@
                                 </div>
 
 
-                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                {# <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
 
                                 <button class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2" type="submit">Se Connecter</button>
 
